[package]
name = "aleo-account"
version = "0.2.0"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "Aleo"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/aleo"
keywords = ["aleo", "cryptography", "blockchain", "decentralized", "zero-knowledge"]
categories = ["cryptography::cryptocurrencies", "operating-systems"]
include = ["Cargo.toml", "src", "README.md", "LICENSE.md"]
license = "GPL-3.0"
edition = "2018"

[[bench]]
name = "account"
path = "benches/account.rs"
harness = false

[dependencies.snarkvm-wasm]
git = "https://github.com/piotr-roslaniec/snarkVM.git"
branch = "testnet3-aleo-snap"
# path = "../../../snarkVM/wasm"
default-features = false
features = [ "dpc", "algorithms" ]

[dev-dependencies.rand]
version = "0.8.0"

[dev-dependencies.rand_chacha]
version = "0.3.0"
default-features = false

[dev-dependencies.bencher]
version = "0.1.5"
